[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/SpawnRadius.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 880.5, 380.125 )

[node name="SpawnZone" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="onEnter"]
[connection signal="body_exited" from="." to="." method="onExit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
